# ministeck

./: CMakeLists.txt  README.md
libministeck/: CMakeLists.txt  ColorConverter.cpp  ColorConverter.h  Colors.cpp  Colors.h  Ministeck.cpp  Ministeck.h  MinisteckVormen.cpp  MinisteckVormen.h  Quantize.cpp  Quantize.h  RandVorm.cpp  RandVorm.h  ScaledOutputImage.cpp  ScaledOutputImage.h  libMinisteckBuilder.cpp
libministeck/Test/: BaseplateTest.cpp  CMakeLists.txt  ColorConverterTest.cpp  ColorsTest.cpp  MinisteckTest.cpp  MinisteckVormenTest.cpp  QuantizeTest.cpp  RandVormTest.cpp  ScaledOutputImageTest.cpp
libministeck/inc/: IBaseplateType.h  IColorConverter.h  IColorTypes.h  IColors.h  IMinisteck.h  IMinisteckVormen.h  IQuantize.h  IRandVorm.h  IScaledOutputImage.h  libMinisteckBuilder.h
libministeck/inc/test/: IColorConverterMock.h  IColorsMock.h  IMinisteckVormenMock.h  IQuantizeMock.h  IRandVormMock.h  IScaledOutputImageMock.h
ministeckUI/: CMakeLists.txt  ImageLabel.h  basePlate.ui  baseplate.cpp  baseplate.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
